deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: default
  labels:
    app: gotify
    app.kubernetes.io/instance: gotify
    app.kubernetes.io/name: gotify
spec:
  selector:
    matchLabels:
      app: gotify
  replicas: 1
  template:
    metadata:
      labels:
        app: gotify
        app.kubernetes.io/instance: gotify
        app.kubernetes.io/name: gotify
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: gotify
        image: gotify/server:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: gotify
          mountPath: /app/data
      volumes:
      - name: gotify
        persistentVolumeClaim:
          claimName: gotify
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  labels:
    app: gotify
    app.kubernetes.io/instance: gotify
    app.kubernetes.io/name: gotify
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gotify
